@@ -76,6 +76,14 @@
         default if this is a standalone server.
       </td>
     </tr>
+    <tr>
+      <td valign="top">Real URL:</td>
+      <td valign="top"><input name="domain" type="text" value="<c:out value='${config.domain}' default=''/>"></td>
+      <td valign="top">(optional)<br/>
+        If SnipSnap is running behind a proxy or dyndns set the real world accessible URL to this instance
+        of snipsnap, e.g. 'http://snipsnap.org/'
+      </td>
+    </tr>
 
     <input name="usemckoi" type="hidden" value="checked">
     <input name="jdbc" type="hidden" value="">
